--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,8 @@
   flex-direction: column;
 }
 
-#owner > div > button {
-  margin: 0 1rem;
+#owner > div > div > button {
+  margin: 0 0.5rem;
 }
 
 pre {
